--- a/MapV1/MelbourneMap.html
+++ b/MapV1/MelbourneMap.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
 
-  var spec2 = "symbol_map_with_graticules.vg.json";
+  var spec2 = "Melbourne_map.json";
   vegaEmbed('#symbol_map', spec2).then(function(result) {
   }).catch(console.error);
 </script>
