--- a/MapV1/MelbourneMap.html
+++ b/MapV1/MelbourneMap.html
@@ -6,21 +6,44 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
   
+  <!-- Import pure.css -->
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
+    integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
   
 </head>
 <body>
-  
-<div id="symbol_map"></div>
+  <div class="pure-g">
+    <div class="pure-u-1-1">
+      <h1>Trials. Hope this works</h1>
+    </div>
+  </div>
 
-<script type="text/javascript">
+  <div class="pure-g">
+    <div class="pure-u-1-1">
+      <div id="symbol_map" class="vis-container" height="225px">
+      </div>
+    </div>
+  </div>
 
-  var spec2 = "Melbourne_map.json";
-  vegaEmbed('#symbol_map', spec2).then(function(result) {
-  }).catch(console.error);
-</script>
+  <div class="pure-g">
+    <div class="pure-u-1-2">
+      <div id="box_plot" class="vis-container" >
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+
+    var spec1 = "Map.json";
+    var spec2 = "Box_Whisker.json"; 
+
+    vegaEmbed('#symbol_map', spec1).then(function(result) {}).catch(console.error);
+    vegaEmbed('#box_plot', spec2).then(function (result) {}).catch(console.error);
+  </script>
 
 </body>
 </html>
