--- a/MapV1/MelbourneMap.html
+++ b/MapV1/MelbourneMap.html
@@ -18,7 +18,7 @@
 <body>
   <div class="pure-g">
     <div class="pure-u-1-1">
-      <h1>Trials. Hope this works</h1>
+      <h1>House Prices of Melbourne</h1>
     </div>
   </div>
 
@@ -30,7 +30,7 @@
   </div>
 
   <div class="pure-g">
-    <div class="pure-u-1-2">
+    <div class="pure-u-1-1">
       <div id="box_plot" class="vis-container" >
       </div>
     </div>
