--- a/MapV1/MelbourneMap.html
+++ b/MapV1/MelbourneMap.html
@@ -18,7 +18,7 @@
 <body>
   <div class="pure-g">
     <div class="pure-u-1-1">
-      <h1>House Prices of Melbourne</h1>
+      <h1>Melbourne House Prices</h1>
     </div>
   </div>
 
@@ -30,19 +30,27 @@
   </div>
 
   <div class="pure-g">
-    <div class="pure-u-1-1">
-      <div id="box_plot" class="vis-container" >
+    <div class="pure-u-1-2">
+      <div id="box" class="vis-container", style="margin-right: 10px;">
+      </div>
+    </div>
+    <div class="pure-u-1-2">
+      <div id="pie" class="vis-container", style="margin-left: 200px;" >
       </div>
     </div>
   </div>
 
+
+
   <script type="text/javascript">
 
     var spec1 = "Map.json";
-    var spec2 = "Box_Whisker.json"; 
+    var spec2 = "Pie.json"; 
+    var spec3 = "Melbourne_map.json"
 
     vegaEmbed('#symbol_map', spec1).then(function(result) {}).catch(console.error);
-    vegaEmbed('#box_plot', spec2).then(function (result) {}).catch(console.error);
+    vegaEmbed('#pie', spec2).then(function (result) {}).catch(console.error);
+    vegaEmbed('#box', spec3).then(function (result) {}).catch(console.error);
   </script>
 
 </body>
